--- a/package.json
+++ b/package.json
@@ -2,9 +2,26 @@
   "name": "pokemon-collectie-app",
   "version": "1.0.0",
   "description": "Dit is een applicatie om te dienen als een template voor TCG applicaties.\r Deze is bedoelt voor Pokemon TCG",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "node .output/server/index.mjs",
+    "generate": "nuxi generate",
+    "preview": "nuxi preview",
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write ."
+  },
+  "dependencies": {
+    "nuxt": "^3.11.2",
+    "vue": "^3.4.19"
+  },
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/color-mode": "latest",
+    "prettier": "^3.1.1",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.8"
   },
   "repository": {
     "type": "git",
