--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@nuxtjs/supabase": "^2.0.3",
     "@pinia/nuxt": "^0.11.3",
+    "@primeuix/styled": "^0.7.4",
+    "@primeuix/themes": "^2.0.2",
     "@primevue/nuxt-module": "^4.5.3",
     "@primevue/themes": "^4.5.3",
     "nuxt": "^3.11.2",
@@ -29,6 +31,8 @@
     "@nuxt/devtools": "latest",
     "@nuxt/test-utils": "^3.21.0",
     "@nuxtjs/color-mode": "latest",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.1",
     "prettier": "^3.1.1",
